# ausweiskopie

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
contrib/: in.varb.Ausweiskopie.icns  push-flatpak.sh  pyinstaller-entrypoint.spec  update-flatpak.sh
src/ausweiskopie/: personalize.py
src/ausweiskopie/editor/: exporter.py  importer.py  model.py  window.py
src/ausweiskopie/redact/: __init__.py  definitions.py  document.py  fields.py
src/ausweiskopie/resources/: __init__.py  dimensions.py  document.py  translations.csv
src/ausweiskopie/resources/documents/: deu_id_temporary_2010-11-01.json
src/ausweiskopie/resources/schemas/: document.json
src/ausweiskopie/ui/: __init__.py  dialogs.py  dnd.py  editor.py  elements.py
